# uranometria

./: .coverage  .gitignore  AGENT-REVIEWERS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  pages.yml
docs/: README.md  annotate.md  annotation-model.md  chart-config.md  charts.md
examples/: skymap.html  skymap.yaml
examples/annotated/: M51_annotated.html  m51.annotations.json  sh2142.annotations.json
scripts/: build-pages-site.sh
src/uranometria/: __init__.py  catalog.py  chart.py  cli.py  core.py  page.py  resources.py  webui.py
src/uranometria/annotate/: __init__.py  field.py  model.py  render_html.py  render_png.py  solver.py
src/uranometria/assets/: marcellus-normal-400.woff2.b64
src/uranometria/data/: sh2.tsv
tests/: test_annotate.py  test_skymap.py
