[project]
name = "uranometria"
version = "0.10.0"
description = "Star-atlas style HTML sky charts of the deep-sky objects you have photographed"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Devon Jones", email = "devon.jones@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "click>=8.4.2",
    "pyyaml>=6",
]

[project.scripts]
uranometria = "uranometria.cli:main"

[project.optional-dependencies]
annotate = [
    "astropy>=6",
    "astroquery>=0.4.8",
    "matplotlib>=3.11.1",
    "pillow>=12.3.0",
]

[dependency-groups]
dev = [
    "astropy>=8.0.1",
    "astroquery>=0.4.11",
    "black>=26.5.1",
    "matplotlib>=3.11.1",
    "pdoc>=16.0.0",
    "pillow>=12.3.0",
    "pytest>=8",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
target-version = ["py311"]
